--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "etherless-server v1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node app.ts"
+    "start": "ts-node app.ts",
+    "test": "mocha -r ts-node/register test/**/*.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.4",
     "aws-sdk": "^2.663.0",
+    "basetag": "^1.0.0",
     "ethers": "^4.0.47",
     "solc": "^0.5.17",
     "solidity": "0.0.1",
@@ -23,6 +26,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.20.2"
+    "eslint-plugin-import": "^2.20.2",
+    "mocha": "^7.1.2"
   }
 }
