--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "etherless-server v1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "ts-node ./src/app/app.ts",
     "test": "mocha -r ts-node/register test/**/*.ts"
   },
   "author": "",
