--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "etherless-server",
-  "version": "1.0.0",
-  "description": "etherless-server v1.0.0",
+  "version": "0.0.2",
+  "description": "etherless-server v0.0.2",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node ./src/app/app.ts",
-    "test": "mocha -r ts-node/register test/**/*.ts"
+    "start": "ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.4",
     "aws-sdk": "^2.663.0",
     "ethers": "^4.0.47",
     "solc": "^0.5.17",
@@ -20,6 +18,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/node": "^13.13.9",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
