--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.663.0",
     "ethers": "^4.0.47",
-    "ipfs-http-client": "^44.1.1",
+    "ipfs-mini": "^1.1.5",
     "solc": "^0.5.17",
     "solidity": "0.0.1",
     "ts-node": "^8.10.1",
