--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.663.0",
     "ethers": "^4.0.47",
     "ipfs-mini": "^1.1.5",
+    "serverless": "^1.72.0",
     "solc": "^0.5.17",
     "solidity": "0.0.1",
     "ts-node": "^8.10.1",
