--- a/serverless/package.json
+++ b/serverless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "etherless-server",
-  "version": "0.0.3",
+  "version": "1.0.2",
   "description": "Manages etherless Serverless Functionalities",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.16",
+    "archiver": "^4.0.1",
     "aws-sdk": "^2.695.0",
-    "jszip": "^3.4.0"
+    "fs": "0.0.1-security",
+    "fs-extra": "^9.0.1",
+    "install-local": "^2.0.0"
   }
 }
